Refactor HTML and improve meta tags
Updated HTML structure and meta tags for improved clarity and functionality. Adjusted styles and script behavior for better user experience.

--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -2,87 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>The Paradox of God — Solitude Reflections · Ninox Antolihao</title>
-  <meta name="description" content="A quiet reflection on belief, certainty, and the humility of living with mystery." />
+  <title>The Paradox of God -- Ninox Antolihao</title>
 
-  <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html" />
-  <meta property="og:type" content="article" />
-  <meta property="og:title" content="The Paradox of God — Solitude Reflections" />
-  <meta property="og:description" content="A reflection on belief, truth, and the courage to live with mystery." />
-  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/paradoxofgod.jpg" />
-  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html" />
-  <meta name="twitter:card" content="summary_large_image" />
+  <!-- Disclaimer -->
+  <meta name="description" content="The ideas expressed here are personal opinions and interpretations. They are not official references, factual sources, or professional advice.">
+  <meta property="og:description" content="The ideas expressed here are personal opinions and interpretations. They are not official references, factual sources, or professional advice.">
 
-  <link rel="icon" href="/reflections/assets/favicon.ico" />
-  <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=21" />
-  <link rel="stylesheet" href="/reflections/assets/reflections.css?v=1" />
+  <!-- Open Graph -->
+  <meta property="og:type" content="article">
+  <meta property="og:title" content="The paradox of God - Solitude Reflections">
+  <meta property="og:image" content="subconP.jpg">
+  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
+
+  <!-- Main reflections styles -->
+  <link rel="stylesheet" href="/reflections/assets/styles/reflections.css?v=15">
 
   <style>
-    :root{
-      --bg:#1f1815;
-      --paper:#2a211e;
-      --ink:#f3e6dd;
-      --muted:#c9b0a4;
-      --accent:#ffb873;
-    }
-
-    body{
-      margin:0;
-      background:var(--bg);
-      color:var(--ink);
-      font-family:system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
-      line-height:1.75;
-    }
-
-    main{
-      max-width:900px;
-      margin:0 auto;
-      padding:7.2rem 1rem 3.2rem; /* space for fixed header */
-    }
-
-    .paper{
-      background:var(--paper);
-      border:1px solid rgba(255,255,255,.06);
-      border-radius:16px;
-      padding:1.2rem 1.1rem;
-      box-shadow:0 18px 60px rgba(0,0,0,.45);
-    }
-
-    /* ✅ smaller cover but visible */
-    .cover{
-      width:100%;
-      display:block;
-      border-radius:14px;
-      border:1px solid rgba(255,255,255,.07);
-      background:#000;
-      margin-bottom:.9rem;
-
-      height:260px;
-      object-fit:cover;
-      object-position:center;
-    }
-
-    h1{
-      margin:.2rem 0 .4rem;
-      line-height:1.15;
-      letter-spacing:.2px;
-      font-size:1.8rem;
-    }
-
-    .subtitle{
-      margin:0 0 1rem;
-      color:var(--muted);
-      font-size:1.02rem;
-    }
-
-    hr{
-      border:0;
-      border-top:1px solid rgba(255,255,255,.10);
-      margin:1.25rem 0;
-    }
- /* =========================
+    /* =========================
        GLOBAL FIXED HEADER
     ========================== */
     .ref-header{
@@ -383,16 +321,16 @@
       100%{ transform: translateX(-100%); }
     }
 
-    
-    /* ============================================================
-       ✅ AUDIO (BUILT-IN, RELIABLE)
-    ============================================================ */
+    /* =========================
+       AUDIO PLAYLIST (tighter)
+    ========================== */
     .audio-wrap{
-      margin: .8rem 0 1.2rem;
-      padding: .9rem;
-      border-radius: 14px;
-      border: 1px solid rgba(255,255,255,.08);
-      background: rgba(0,0,0,.15);
+      max-width:800px;
+      margin:1.2rem auto 1.2rem auto;
+      padding:0.85rem 0.75rem;
+      border-radius:16px;
+      background:#261a15;
+      border:3px solid rgba(101,55,14,1);
     }
 
     #reflectionAudio{
@@ -401,22 +339,22 @@
     }
 
     .playlist{
-      margin-top:.9rem;
+      margin-top:0.9rem;
       display:flex;
       flex-direction:column;
-      gap:.4rem;
+      gap:0.4rem;
     }
 
     .playlist-row{
       display:flex;
       align-items:center;
       justify-content:space-between;
-      padding:.55rem .55rem;
+      padding:0.55rem 0.55rem;
       background:#261a15;
-      border-radius:10px;
+      border-radius:8px;
       cursor:pointer;
       border:1.5px solid #120d09;
-      transition: background .15s ease, border-color .15s ease;
+      transition: background 0.15s ease, border-color 0.15s ease, color 0.15s ease;
     }
 
     .playlist-row:hover{ border-color:#42251c; }
@@ -424,20 +362,19 @@
     .playlist-row.active{
       background:#170d09;
       border-color:#997060;
-      box-shadow:0 0 2px rgba(255,0,0,.35);
+      box-shadow:0 0 2px rgba(255,0,0,0.4);
     }
 
     .playlist-main{
       display:flex;
       flex-direction:column;
-      gap:0;
+      gap:0rem;
       overflow:hidden;
-      min-width:0;
     }
 
     .playlist-title{
-      font-size:.96rem;
-      font-weight:700;
+      font-size:0.96rem;
+      font-weight:600;
       color:#f3e6dd;
       white-space:nowrap;
       overflow:hidden;
@@ -445,99 +382,99 @@
     }
 
     .playlist-sub{
-      font-size:.78rem;
+      font-size:0.78rem;
       color:#b29587;
       white-space:nowrap;
       overflow:hidden;
       text-overflow:ellipsis;
-      margin-top:.05rem;
     }
 
     .playlist-duration{
-      font-size:.82rem;
+      font-size:0.82rem;
       color:#c9b0a4;
-      margin-left:.75rem;
+      margin-left:0.75rem;
       flex-shrink:0;
-    }
-
-    /* ============================================================
-       ✅ HEADER LAYOUT OVERRIDES (NO REDESIGN)
-       - actions left
-       - brand (logo/title/subtitle) right
-    ============================================================ */
-    .ref-header-inner{
-      justify-content:flex-start;
-      gap:.75rem;
-    }
-
-    .ref-actions{
-      order:0;
-      margin-right:.35rem;
-    }
-
-    .ref-left{
-      order:2;
-      margin-left:auto;
-      justify-content:flex-end;
-    }
-
-    .ref-titlewrap{
-      align-items:flex-end;
-      text-align:right;
-    }
-
-    .ref-brand-logo{
-      width:40px;
-      height:40px;
-    }
-
-    @media (max-width:640px){
-      .ref-header-inner{
-        flex-direction:column;
-        align-items:stretch;
-      }
-
-      .ref-actions{
-        width:100%;
-        justify-content:space-between;
-        order:0;
-      }
-
-      .ref-left{
-        width:100%;
-        margin-left:0;
-        justify-content:flex-end;
-        order:1;
-      }
-
-      .ref-titlewrap{
-        align-items:flex-end;
-        text-align:right;
-      }
     }
   </style>
 
-  <!-- Page identity (still useful for unified header/share fallback) -->
+  <!-- Service Worker -->
   <script>
-    window.REFLECTION_PAGE = {
-      slug: "the-paradox-of-god",
-      title: "The Paradox of God",
-      cover: "/reflections/pages/the-paradox-of-god/paradoxofgod.jpg",
-      url: "https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html"
-    };
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/reflections/sw.js');
+    }
   </script>
-
-  <!-- Unified header engine (HEADER only). Cache-bust to v=22 -->
-  <script defer src="/reflections/assets/reflections-header.js?v=22"></script>
 </head>
 
 <body>
-  <!-- UNIFIED HEADER MOUNT -->
+
+  <!-- FIXED GLOBAL HEADER -->
   <header class="ref-header">
     <div class="ref-header-inner">
-  <div id="reflectionsHeader" data-current="the-paradox-of-god"></div>
 
-  <main>
+      <!-- Left brand + hamburger + local buttons -->
+      <div class="ref-header-left">
+        <a href="/reflections/index.html" class="brand-link">
+          <img src="/reflections/assets/logo1.PNG" alt="Moments of Solitude" class="brand-logo">
+          <span class="brand-text">
+            <span class="brand-title">The Paradox of God</span>
+            <span class="brand-subtitle">Stone Grill Reflections</span>
+          </span>
+        </a>
+
+        <div class="header-actions">
+          <button class="nav-toggle" type="button" aria-label="Toggle navigation" aria-expanded="false">☰</button>
+
+          <div class="nav-buttons">
+            <button type="button" onclick="history.back()">Back</button>
+            <button type="button" onclick="sharePage()">Share</button>
+            <button type="button" onclick="document.getElementById('reflectionAudio').scrollIntoView({behavior:'smooth'})">Audio</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- ✅ NAVIGATION LINKS (NOW PRESENT ON DESKTOP) -->
+      <nav class="ref-nav" aria-label="Reflections navigation">
+        <ul>
+          <li><a href="/reflections/index.html">HOME</a></li>
+
+          <li><a href="/reflections/pages/divine-hiddeness/read.html">Divine Hiddeness</a></li>
+          <li><a href="/reflections/pages/subconsciousmind/read.html">The Subconscious Mind</a></li>
+          <li><a href="/reflections/pages/the-god-we-created/read.html">The God We Created</a></li>
+          <li><a href="/reflections/pages/the-paradox-of-god/read.html">The Paradox of God</a></li>
+          <li><a href="/reflections/pages/the-inner-listener/read.html">The Prayer</a></li>
+          <li><a href="/reflections/pages/transcendence/read.html">Transcendence</a></li>
+          <li><a href="/reflections/pages/the-madness-of-fath/read.html">The Madness of Faith</a></li>
+          <li><a href="/reflections/pages/the-lost-language-of-metaphor/read.html">The Lost Language of Metaphor</a></li>
+
+          <!-- Included only as a link (page must exist in your repo to avoid 404) -->
+          <li><a href="/reflections/pages/moral-choice/read.html">Moral Choice</a></li>
+
+          <li><a href="/reflections/pages/belief/read.html">BELIEF AND GOODNESS</a></li>
+          <li><a href="/reflections/pages/question-label-sinner/read.html">Seeking Asurance is Labeled A Sinner</a></li>
+          <li><a href="/reflections/pages/initial-premise/read.html">The initial Premise of a Perfect Loving God</a></li>
+          <li><a href="/reflections/pages/diety/read.html">THE DEITY</a></li>
+          <li><a href="/reflections/pages/question-label-sinner/read.html">Labeled Sinner</a></li>
+          <li><a href="/reflections/pages/silent-influence/read.html">Silent Influence</a></li>
+          <li><a href="/reflections/pages/oneness-duality/read.html">Oneness Duality</a></li>
+          <li><a href="/reflections/pages/mirror-of-worship/read.html">The Mirror of Worship</a></li>
+        </ul>
+      </nav>
+
+      <!-- Right: page badge -->
+      <div class="ref-header-right">
+        <div class="current-page-badge">
+          <span class="page-icon">△</span>
+          <span class="page-label">The Divine Hiddeness</span>
+        </div>
+      </div>
+
+    </div>
+
+    <!-- Overlay (visual only) -->
+    <div class="nav-overlay"></div>
+  </header>
+
+<main>
     <article class="paper">
       <img class="cover"
            src="/reflections/pages/the-paradox-of-god/paradoxofgod.jpg"
@@ -584,7 +521,7 @@
       </p>
 
       <p>
-        Yet this is what many religions quietly promise: certainty — a God perfectly mapped,
+        Yet this is what many religions quietly promise: certainty -- a God perfectly mapped,
         fully defined, with motives explained and plans decoded. Do this, believe this, repeat this,
         and the mystery becomes manageable, safe, familiar. The story stops being a mirror and
         hardens into a wall.
@@ -593,73 +530,144 @@
       <p>
         But if there is a divine reality, it would not shrink to fit inside our categories.
         It would not be limited by our metaphors or bound by our scriptures.
-        It would be larger than our favourite story about it — including this one.
+        It would be larger than our favourite story about it -- including this one.
         Any description we give is already too small.
       </p>
 
       <p>
-        This is the paradox: we long to know, to define, to be sure — and yet whatever is truly infinite
+        This is the paradox: we long to know, to define, to be sure -- and yet whatever is truly infinite
         cannot be fully captured by a mind that forgets, misremembers, and fears.
         Our language reaches upward like a child's hand toward the sky: sincere, but never complete.
       </p>
 
       <p>
         Perhaps the honest path is not to cling to perfect answers, but to walk with a humble question.
-        Not “I know what God is,” but “Whatever the Truth is, let it find me changing.”
+        Not "I know what God is," but "Whatever the Truth is, let it find me changing."
         Not a system to defend, but a mystery to live inside.
       </p>
 
       <hr>
 
       <p style="font-size:.9rem;color:var(--muted);">
-        These thoughts are personal reflections — not doctrine, not instruction, not authority.
+        These thoughts are personal reflections -- not doctrine, not instruction, not authority.
         If there is one sacred sentence here, it is simply:
-        <em>“I do not know — but I am listening.”</em>
+        <em>"I do not know -- but I am listening."</em>
       </p>
     </article>
+  
+    <footer>
+      <p>© 2025 Ninox Antolihao · First Edition -- Stone Grill Press · Leyte, Philippines</p>
+    </footer>
   </main>
 
   <script>
-    // ✅ Playlist logic (reliable, independent from unified JS)
+    // Header / hamburger behavior + current page highlight
+    (function () {
+      const header = document.querySelector('.ref-header');
+      const toggle = document.querySelector('.nav-toggle');
+      const nav = document.querySelector('.ref-nav');
+      const overlay = document.querySelector('.nav-overlay');
+
+      if (!header || !toggle || !nav) return;
+
+      function closeNav(){
+        header.classList.remove('nav-open');
+        toggle.setAttribute('aria-expanded', 'false');
+      }
+
+      function openNav(){
+        header.classList.add('nav-open');
+        toggle.setAttribute('aria-expanded', 'true');
+      }
+
+      // Toggle hamburger
+      toggle.addEventListener('click', (e) => {
+        e.stopPropagation();
+        const isOpen = header.classList.contains('nav-open');
+        if (isOpen) closeNav();
+        else openNav();
+      });
+
+      // Close when a nav link is tapped (especially on mobile)
+      nav.addEventListener('click', (e) => {
+        if (e.target && e.target.tagName && e.target.tagName.toLowerCase() === 'a') {
+          closeNav();
+        }
+      });
+
+      // Close when overlay clicked
+      if (overlay) overlay.addEventListener('click', closeNav);
+
+      // Close if clicking outside header while open
+      document.addEventListener('click', (e) => {
+        if (!header.classList.contains('nav-open')) return;
+        if (header.contains(e.target)) return;
+        closeNav();
+      });
+
+      // ✅ Auto-highlight current page
+      const here = location.pathname.replace(/\/+$/, '');
+      nav.querySelectorAll('a').forEach(a => {
+        const href = (a.getAttribute('href') || '').replace(/\/+$/, '');
+        a.classList.remove('active');
+        a.removeAttribute('aria-current');
+        if (href && href === here) {
+          a.classList.add('active');
+          a.setAttribute('aria-current', 'page');
+        }
+      });
+    })();
+
+    // Audio playlist logic
     document.addEventListener('DOMContentLoaded', () => {
-      const audio = document.getElementById('reflectionAudio');
-      const source = document.getElementById('audioSource');
-      const rows = Array.from(document.querySelectorAll('.playlist-row'));
+      const audioPlayer = document.getElementById('reflectionAudio');
+      const audioSource = document.getElementById('audioSource');
+      const rows = document.querySelectorAll('.playlist-row');
 
-      if (!audio || !source || rows.length === 0) return;
+      // Default track: first row
+      if (rows.length > 0) {
+        audioSource.src = rows[0].dataset.src;
+        audioPlayer.load();
+      }
 
-      // Default track = active row, else first
-      const active = rows.find(r => r.classList.contains('active')) || rows[0];
-      source.src = active.dataset.src;
-      audio.load();
-
-      // Switch track on click
+      // Clicking a row switches track
       rows.forEach(row => {
         row.addEventListener('click', () => {
           rows.forEach(r => r.classList.remove('active'));
           row.classList.add('active');
 
-          source.src = row.dataset.src;
-          audio.load();
-          audio.play().catch(() => {});
+          audioSource.src = row.dataset.src;
+          audioPlayer.load();
+          audioPlayer.play();
         });
       });
 
-      // Duration fill
+      // Auto-fill durations
       rows.forEach(row => {
-        const temp = new Audio(row.dataset.src);
-        temp.addEventListener('loadedmetadata', () => {
-          const d = temp.duration;
-          if (!isNaN(d)) {
-            const t = Math.floor(d);
-            const m = String(Math.floor(t / 60)).padStart(2,'0');
-            const s = String(t % 60).padStart(2,'0');
-            const el = row.querySelector('.playlist-duration');
-            if (el) el.textContent = `${m}:${s}`;
+        const tempAudio = new Audio(row.dataset.src);
+        tempAudio.addEventListener('loadedmetadata', () => {
+          const dur = tempAudio.duration;
+          if (!isNaN(dur)) {
+            const total = Math.floor(dur);
+            const min = String(Math.floor(total / 60)).padStart(2, '0');
+            const sec = String(total % 60).padStart(2, '0');
+            const durEl = row.querySelector('.playlist-duration');
+            if (durEl) durEl.textContent = `${min}:${sec}`;
           }
         });
       });
     });
+
+    function sharePage() {
+      if (navigator.share) {
+        navigator.share({
+          title: "The Primacy of Moral Accountability -- Ninox Antolihao",
+          url: window.location.href
+        });
+      } else {
+        alert("Sharing not supported on this device.");
+      }
+    }
   </script>
 </body>
 </html>
