Update title and references for 'The Paradox of God'

--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>PRAYER -- The Inner Listener</title>
+  <title>The PARADOX OF GOD -- </title>
 
   <!-- Disclaimer -->
   <meta name="description" content="The ideas expressed here are personal opinions and interpretations. They are not official references, factual sources, or professional advice.">
@@ -12,9 +12,9 @@
 
   <!-- Open Graph -->
   <meta property="og:type" content="article">
-  <meta property="og:title" content="PRAYER - The inner listener">
-  <meta property="og:image" content="prayer.jpg">
-  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/the-inner-listener/read.html">
+  <meta property="og:title" content="PARADOX OF GOD - ">
+  <meta property="og:image" content="paradoxofgod.PNG">
+  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
 
   <!-- Main reflections styles -->
   <link rel="stylesheet" href="/reflections/assets/styles/reflections.css?v=15">
@@ -462,8 +462,8 @@
           <li><a href="/reflections/pages/divine-hiddeness/read.html">Divine Premise</a></li>
           <li><a href="/reflections/pages/subconsciousmind/read.html">The Subconscious Mind</a></li>
           <li><a href="/reflections/pages/the-god-we-created/read.html">The God We Created</a></li>
-          <li><a href="/reflections/pages/the-paradox-of-god/read.html">The Paradox of God</a></li>
-          <li><a href="/reflections/pages/the-inner-listener/read.html" class="active">The Prayer</a></li>
+          <li><a href="/reflections/pages/the-paradox-of-god/read.html" class="active">The Paradox of God</a></li>
+          <li><a href="/reflections/pages/the-inner-listener/read.html">The Prayer</a></li>
           <li><a href="/reflections/pages/transcendence/read.html">Transcendence</a></li>
           <li><a href="/reflections/pages/the-madness-of-fath/read.html">The Madness of Faith</a></li>
           <li><a href="/reflections/pages/the-lost-language-of-metaphor/read.html">The Lost Language of Metaphor</a></li>
@@ -482,7 +482,7 @@
       <div class="ref-header-right">
         <div class="current-page-badge">
           <span class="page-icon">△</span>
-          <span class="page-label">The Prayer</span>
+          <span class="page-label">The Paradox of God</span>
         </div>
       </div>
     </div>
