Update brand title to 'The PARADOX OF GOD'

--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -437,7 +437,7 @@
                alt="Moments of Solitude"
                class="brand-logo">
           <span class="brand-text">
-            <span class="brand-title">The Inner Listener</span>
+            <span class="brand-title">The PARADOX OF GOD</span>
             <span class="brand-subtitle">Stone Grill Reflections</span>
           </span>
         </a>
