Revise HTML and meta tags for Transcendence page
Updated the HTML structure and meta tags for the Transcendence page, enhancing SEO and content clarity.

--- a/reflections/pages/transcendence/read.html
+++ b/reflections/pages/transcendence/read.html
@@ -1,89 +1,172 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
+  <!-- ===== META ===== -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Unraveling the Enigma of Absolute Truth — Solitude Reflections</title>
+  <meta name="description" content="A philosophical journey from transcendence to Absolute Reality." />
 
-  <title>Transcendence — Solitude Reflections · Ninox Antolihao</title>
-  <meta name="description" content="On the quiet movement beyond ego, beyond fear, and into the wider self that can carry suffering without becoming it." />
+  <link rel="icon" href="/reflections/assets/favicon.ico">
 
-  <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/transcendence/read.html" />
-  <meta property="og:type" content="article" />
-  <meta property="og:title" content="Transcendence — Solitude Reflections" />
-  <meta property="og:description" content="A reflection on going beyond the narrow self into a wider inner freedom." />
-  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/transcendence/transcendence.jpg" />
-  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/transcendence/read.html" />
-  <meta name="twitter:card" content="summary_large_image" />
+  <!-- Social Preview -->
+  <meta property="og:title" content="Unraveling the Enigma of Absolute Truth">
+  <meta property="og:description" content="From imperfection, causation, and subjectivity to the paradox of the Absolute.">
+  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/transcendence/transcendence.png">
 
-  <link rel="icon" href="/reflections/assets/favicon.ico" />
-  <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=21" />
-  <link rel="stylesheet" href="/reflections/assets/reflections.css?v=1" />
-
-  <style>
-    :root{--bg:#1f1815;--paper:#2a211e;--ink:#f3e6dd;--muted:#c9b0a4;--accent:#ffb873;}
-    body{margin:0;background:var(--bg);color:var(--ink);font-family:system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;line-height:1.75;}
-    main{max-width:900px;margin:0 auto;padding:7.2rem 1rem 3.2rem;}
-    .paper{background:var(--paper);border:1px solid rgba(255,255,255,.06);border-radius:16px;padding:1.2rem 1.1rem;box-shadow:0 18px 60px rgba(0,0,0,.45);}
-    .cover{width:100%;border-radius:14px;display:block;border:1px solid rgba(255,255,255,.07);margin-bottom:1rem;background:#000;}
-    h1{margin:.2rem 0 .4rem;line-height:1.15;letter-spacing:.2px;font-size:1.8rem;}
-    .subtitle{margin:0 0 1rem;color:var(--muted);font-size:1.02rem;}
-    .audio-wrap{margin:1rem 0 1.2rem;padding:.9rem;border-radius:14px;border:1px solid rgba(255,255,255,.08);background:rgba(0,0,0,.15);}
-    hr{border:0;border-top:1px solid rgba(255,255,255,.10);margin:1.25rem 0;}
-  </style>
+  <!-- Global Assets -->
+  <link rel="stylesheet" href="/reflections/assets/reflections.css?v=19">
+  <script src="/reflections/assets/audio-system.js?v=14"></script>
+  <link rel="manifest" href="/reflections/manifest.json?v=3">
 </head>
 
 <body>
-  <div id="reflectionsHeader" data-current="transcendence"></div>
-  <section class="audio-wrap" id="audio"></section>
 
-  <script>
-    window.REFLECTION_PAGE = {
-      slug: "transcendence",
-      title: "Transcendence",
-      cover: "/reflections/pages/transcendence/transcendence.jpg",
-      url: "https://stonegrillresto.net/reflections/pages/transcendence/read.html"
-    };
-
-    window.REFLECTION_AUDIO = [
-      { title: "Transcendence", src: "/reflections/pages/transcendence/transcendence.mp3" },
-      { title: "Transcendence (Short)", src: "/reflections/pages/transcendence/transcendence-short.mp3" }
-    ];
-  </script>
-
-  <script src="/reflections/assets/reflections-header.js?v=21"></script>
-
-  <main>
-    <article class="paper">
-      <img class="cover" src="/reflections/pages/transcendence/transcendence.jpg" alt="Transcendence cover">
-
-      <h1>Transcendence</h1>
-      <div class="subtitle">
-        A Solitude Reflection by Ninox Antolihao<br>
-        On moving beyond the narrow self.
+<!-- ===== HEADER ===== -->
+<header class="ref-header">
+  <div class="ref-header-inner">
+    <a class="ref-brand" href="/reflections/">
+      <img src="/reflections/assets/logo.png" alt="Solitude Reflections" class="ref-brand-logo">
+      <div>
+        <div class="ref-brand-title">Solitude Reflections</div>
+        <div class="ref-brand-sub">Stone Grill Press</div>
       </div>
+    </a>
 
-      <p>
-        Transcendence is often imagined as escape — as rising above pain, above human weakness, above the messy earth.
-        But real transcendence is not an exit. It is an expansion.
-      </p>
+    <div class="ref-actions">
+      <a class="ref-btn" href="/reflections/">Home</a>
+      <a class="ref-btn" href="/reflections/about/">About</a>
+      <a class="ref-btn" href="https://stonegrillresto.net" target="_blank">Stone Grill</a>
+    </div>
+  </div>
+</header>
 
-      <p>
-        It is the moment the self grows wide enough to hold discomfort without collapsing into it.
-        The moment you can feel fear without letting fear drive.
-        The moment you can carry grief without turning grief into identity.
-      </p>
+<!-- ===== MAIN ===== -->
+<main class="ref-main">
+<article class="ref-article">
 
-      <p>
-        The ego wants control. Transcendence learns surrender — not surrender to defeat,
-        but surrender to reality as it is, so wisdom can move through you without distortion.
-      </p>
+  <!-- ===== COVER ===== -->
+  <section class="ref-hero">
+    <img
+      class="ref-hero-cover"
+      src="/reflections/pages/transcendence/transcendence.png"
+      alt="Unraveling the Enigma of Absolute Truth"
+      onerror="this.src='/reflections/assets/placeholder.jpg'">
 
-      <hr>
+    <h1 class="ref-title">Unraveling the Enigma of Absolute Truth</h1>
+    <p class="ref-subtitle">From Transcendence to Absolute Reality</p>
 
-      <p style="font-size:.9rem;color:var(--muted);">
-        The goal is not to become untouched. The goal is to become unbroken — even while touched.
-      </p>
-    </article>
-  </main>
+    <div class="ref-meta">
+      <span>Stone Grill Press</span>
+      <span>First Edition — 2025</span>
+    </div>
+  </section>
+
+  <!-- ===== AUDIO ===== -->
+  <section class="audio-wrap" id="audio">
+    <!-- audio-system.js reads this data attribute -->
+    <div
+      class="audio-player"
+      data-title="Unraveling the Enigma of Absolute Truth"
+      data-audio="/reflections/pages/transcendence/transcendence.mp3">
+    </div>
+  </section>
+
+  <div class="ref-divider">— ❖ —</div>
+
+  <!-- ===== INTRODUCTION ===== -->
+  <section class="ref-section">
+    <h2>Introduction</h2>
+    <p>
+      The human mind, bound by the limits of space, time, and perception, inevitably asks whether anything exists beyond its immediate experience.
+      This fundamental inquiry forms the philosophical journey from transcendence to Absolute Reality.
+      <em>Transcendence</em>, meaning “to go beyond,” describes the act of searching for something that exceeds the material world,
+      while <em>Absolute Reality</em> is the ultimate, non-dependent, perfect, and unified goal of that search.
+    </p>
+    <p>
+      The concept of the Absolute is not a scientific hypothesis but a logical necessity posited to resolve the inescapable flaws,
+      dualities, and contradictions observed within our subjective, changing, and limited everyday existence.
+    </p>
+  </section>
+
+  <div class="ref-divider">— ❖ —</div>
+
+  <!-- ===== BODY ===== -->
+  <section class="ref-section">
+    <h2>The Philosophical Impetus</h2>
+    <p>
+      The initial philosophical impetus for positing an Absolute Reality is the realization of the contingency and imperfection of the material world.
+      This realization creates a profound set of problems that cannot be solved by material evidence alone.
+    </p>
+
+    <h3>1. The Problem of Imperfection</h3>
+    <p>
+      Every physical object is temporary and flawed. A drawn circle is always imperfect; a just law is always applied unevenly.
+      Yet the human mind possesses the concept of perfection.
+      Philosophers such as Plato argued that if all we experience are imperfect copies,
+      there must logically exist a perfect, non-material source where these ideals reside.
+    </p>
+
+    <h3>2. The Problem of Causation</h3>
+    <p>
+      In the material world, everything is dependent; every effect has a prior cause, leading to infinite regress.
+      To halt this chain, thinkers proposed a First Cause or Unmoved Mover—an Absolute that exists independently
+      and requires no external explanation.
+    </p>
+
+    <h3>3. The Problem of Subjectivity</h3>
+    <p>
+      Human perception is inherently relative, as illustrated by the “6 vs. 9” analogy.
+      If all truth is subjective, moral and intellectual chaos follows.
+      The Absolute functions as a necessary objective standard against which relative claims can be measured.
+    </p>
+  </section>
+
+  <div class="ref-divider">— ❖ —</div>
+
+  <!-- ===== PARADOX ===== -->
+  <section class="ref-section">
+    <h2>The Paradox of the Absolute</h2>
+    <p>
+      Although the Absolute is logically necessary, its transcendent nature creates a paradox.
+      The mind—bound by time, space, and language—attempts to comprehend that which exists beyond those categories.
+      This creates the “software/hardware dilemma”:
+      the mind can infer the Absolute’s existence but cannot directly experience or fully understand its essence.
+    </p>
+
+    <p>
+      This leads to two responses:
+    </p>
+    <ul>
+      <li>
+        <strong>Mysticism:</strong> accepting the paradox and seeking the Absolute through non-rational, ineffable experience.
+      </li>
+      <li>
+        <strong>Skepticism:</strong> rejecting the Absolute as a conceptual construct designed to ease existential anxiety.
+      </li>
+    </ul>
+  </section>
+
+  <div class="ref-divider">— ❖ —</div>
+
+  <!-- ===== CONCLUSION ===== -->
+  <section class="ref-section">
+    <h2>Conclusion</h2>
+    <p>
+      The journey from transcendence to Absolute Reality reflects humanity’s deepest longing for unity and certainty.
+      Yet modern thought recognizes that logical necessity does not guarantee existence.
+      Existential philosophy urges a shift away from searching for an external Absolute
+      and toward the courageous creation of meaning within our finite, subjective lives.
+    </p>
+  </section>
+
+  <footer class="ref-footer">
+    <p>Stone Grill Press · First Edition — 2025</p>
+    <p>Ninox Antolihao</p>
+  </footer>
+
+</article>
+</main>
+
 </body>
 </html>
