Fix punctuation and formatting in read.html

--- a/reflections/pages/moral-choice/read.html
+++ b/reflections/pages/moral-choice/read.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
   <!-- =========================================================
-    SOLITUDE REFLECTIONS — READ PAGE (UNIFIED HEADER)
+    SOLITUDE REFLECTIONS -- READ PAGE (UNIFIED HEADER)
     Title: THE MORAL CHOICE OF DUALITY
     File:  /reflections/pages/moral-choice/read.html
   ========================================================== -->
 
-  <title>The Moral Choice of Duality — Solitude Reflections · Ninox Antolihao</title>
+  <title>The Moral Choice of Duality -- Solitude Reflections · Ninox Antolihao</title>
 
   <meta name="description" content="A reflection on contrast, moral restraint, and why true goodness requires the capacity to do harm and the decision not to." />
 
@@ -18,7 +18,7 @@
 
   <!-- Open Graph -->
   <meta property="og:type" content="article" />
-  <meta property="og:title" content="The Moral Choice of Duality — Solitude Reflections" />
+  <meta property="og:title" content="The Moral Choice of Duality -- Solitude Reflections" />
   <meta property="og:description" content="True goodness requires the capacity to do harm and the decision not to." />
   <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/moral-choice/moralchoice.jpg" />
   <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/moral-choice/read.html" />
@@ -227,7 +227,7 @@
 
       <img class="cover"
            src="/reflections/pages/moral-choice/moralchoice.jpg"
-           alt="Cover — The Moral Choice of Duality"
+           alt="Cover -- The Moral Choice of Duality"
            loading="lazy" />
 
       <h1>THE MORAL CHOICE OF DUALITY</h1>
@@ -271,7 +271,7 @@
       <p>
         Remove the opposite, and the concept collapses.
         There is no height without depth, no sound without silence, no form without emptiness.
-        Contrast is not a flaw of reality—it is the condition that allows anything to be known at all.
+        Contrast is not a flaw of reality--it is the condition that allows anything to be known at all.
       </p>
 
       <p>
@@ -285,17 +285,17 @@
       <h2 class="section-title">Divinity and Duality</h2>
 
       <p>
-        If existence in the material world requires contrast, then divinity—if it exists within or in relation to this world—cannot be exempt.
+        If existence in the material world requires contrast, then divinity--if it exists within or in relation to this world--cannot be exempt.
       </p>
 
       <p>
-        A being defined only as “good” has no meaning unless “evil” is possible.
+        A being defined only as "good" has no meaning unless "evil" is possible.
         Goodness is not the absence of darkness; it is the conscious orientation in spite of it.
       </p>
 
       <p>
         No human is purely good.
-        Yet some humans live ethically—not because they lack darker impulses, but because they do not act on them.
+        Yet some humans live ethically--not because they lack darker impulses, but because they do not act on them.
       </p>
 
       <p>This distinction matters.</p>
@@ -310,7 +310,7 @@
       <h2 class="section-title">The Misunderstanding of Goodness</h2>
 
       <p>
-        We often imagine goodness as innocence—clean, harmless, untouched by shadow.
+        We often imagine goodness as innocence--clean, harmless, untouched by shadow.
         But innocence is not virtue. It is simply untested.
       </p>
 
@@ -319,7 +319,7 @@
       </p>
 
       <p>
-        The danger begins when power is misunderstood—when individuals believe they are purely good, unaware of their capacity for cruelty.
+        The danger begins when power is misunderstood--when individuals believe they are purely good, unaware of their capacity for cruelty.
         What we do not acknowledge, we do not control.
       </p>
 
@@ -333,16 +333,16 @@
       <h2 class="section-title">The Unspoken Warning</h2>
 
       <p>
-        To deny the dark side of oneself is not holiness—it is blindness.
+        To deny the dark side of oneself is not holiness--it is blindness.
         And blindness, when paired with power, becomes dangerous.
       </p>
 
       <p>
-        Perhaps the deepest moral failure is not being “bad,” but believing one is incapable of being bad.
+        Perhaps the deepest moral failure is not being "bad," but believing one is incapable of being bad.
       </p>
 
       <p>
-        If divinity exists, maybe it is not defined by moral purity, but by perfect awareness—
+        If divinity exists, maybe it is not defined by moral purity, but by perfect awareness--
         knowing every possible expression of power and choosing restraint.
       </p>
 
@@ -352,7 +352,7 @@
       <p>Goodness is not the absence of darkness, but the discipline of not becoming it.</p>
 
       <p>
-        And perhaps the question is not whether the divine contains both light and shadow—
+        And perhaps the question is not whether the divine contains both light and shadow--
         but whether we are willing to admit that we do too.
       </p>
 
